<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HabitApp</string>
    
    <!-- Main Activity -->
    <string name="add_habit">Add Habit</string>
    <string name="toggle_view">Toggle View</string>
    <string name="categories">Categories</string>
    
    <!-- Habit Detail -->
    <string name="habit_name">Habit Name</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="current_streak_0_days">Current Streak: 0 days</string>
    <string name="highest_streak_0_days">Highest Streak: 0 days</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    
    <!-- Category -->
    <string name="add_category">Add Category</string>
    <string name="category_name">Category Name</string>
    
    <!-- Calendar -->
    <string name="calendar_view">Calendar View</string>
</resources>
